recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if(levels==0){avance()}
  else{
    sierpinski(levels-1,length/3)
    droite(60)
    sierpinski(levels-1,length/3)
    droite(60)
    sierpinski(levels-1,length/3)
    droite(60)
  }
}